Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5217

KuduTableSink checks null constraints incorrectly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.9.0
    • Backend

    Description

      Something I noticed while looking at kudu-table-sink.cc: we use the referenced_columns map to translate between the index into the output exprs 'j' and the index into columns in the Kudu table 'col', but we incorrectly use 'j' when calling into the Kudu table schema to check the nullability of columns.

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            twmarshall Thomas Tauber-Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: